--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,72 @@
 		<link type="text/css" rel="stylesheet" href="/stylesheets/jprogress.min.css" />
 		<script type="text/javascript" src="/javascripts/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="/javascripts/jquery.knob.min.js"></script>
+		<script type="text/javascript" src="/javascripts/jquery.smint.js"></script>
 		<script type="text/javascript" src="/javascripts/jprogress.min.js"></script>
 		
 	</head>
 	<body>
-		<h1>John Kulp</h1>
-			<div>Intro about me</div>
-			<a href="/resume">download my resume</a> <a href="/cv">download my cover letter</a>
-		<h2>Education and Work Experience</h2>
-			<div>education stuff here</div>
-		<h2>Skills</h2>
+	<div class="wrap ">
+		<div class="section sTop">
+			<div class="inner">
+				<h1 class="title">John Kulp Resume</h1>
+				<h2 class="subtitle">Writing well organized and maintainable code</h2>
+			</div>
+		</div>
+
+		<div class="subMenu" >
+		 	<div class="inner">
+		 		<a href="#sTop" class="subNavBtn">Home</a>
+		 		<a href="#s1" class="subNavBtn">Section 1</a> 
+				<a href="#s2" class="subNavBtn">Section 2</a>
+				<a href="#s3" class="subNavBtn">Section 3</a>
+				<a href="#s4" class="subNavBtn">Section 4</a>
+				<a href="#s5" class="subNavBtn">Section 5</a>
+				<a href="#" class="subNavBtn extLink end">External Link</a>
+			</div>
+		</div>
+
+		<div class="section s1"><h2>Contact</h2>
+			<ul>
+				<li>Linkdin</li>
+				<li>Github</li>
+			</ul>
+			<ul>
+				<li>
+					<div>Email</div>
+					<div>John.H.Kulp@gmail.com</div>
+				</li>
+				<li>
+					<div>Phone Number</div>
+					<div>1-440-796-0245</div>
+				</li>
+			</ul>
+		</div>
+		<div class="section s2"><h2>Work Experience</h2>
+			<ul>
+				{% for work in employment %}
+				<li>
+					<div class="education-category">{{ work.start_date }}-{{ work.end_date}}</div>
+					<div class="education-company">{{ work.name }}</div>
+					<div class="education-title">{{ work.title }}</div>
+					<div class="education-content">{{ work.description }}</div>
+				</li>
+				{% endfor %}
+			</ul>
+		</div>
+		<div class="section s3"><h2>Education</h2>
+			<ul>
+				{% for school in education %}
+				<li>
+					<div class="education-category">{{ school.start_date }}-{{ school.end_date}}</div>
+					<div class="education-company">{{ school.name }}</div>
+					<div class="education-title">{{ school.title }}</div>
+					<div class="education-content">{{ school.description }}</div>
+				</li>
+				{% endfor %}
+			</ul>
+		</div>
+		<div class="section s4"><h2>Skills</h2>
 			<ul id = "skills-list">
 			{% for category in skills %}
 				<li class="skill">
@@ -21,7 +77,7 @@
 					<ul>
 					{% for skill in category.val %}
 						<li>
-							<span>{{ skill.name }}</span>
+							<div class="skill-category">{{ skill.name }}</div>
 							<div class="skill-bar" progress="{{ skill.val }}%"></div>
 						</li>
 					{% endfor %}
@@ -29,29 +85,21 @@
 				</li>
 			{% endfor %}
 			</ul>
-		<h2>Language Proficiency</h2>
+		</div>
+		<div class="section s5"><h2>Language Proficiency</h2>
 			<div id = "languages">
-
 				{% for language in languages %}
-
 				<div class="language">
 					<div class="circle-box">
+						<div class="language-category">{{ language.name }}</div>
 						<input class="circle" data-min="0" data-max="100" value="{{ language.val }}">
 						</input>
-						<div class="chart-label">{{ language.name }}</div>
 					</div>
 				</div>
-
 				{% endfor %}
-
 			</div>
-		<h2>Contact</h2>
-			<ul>
-				<li>Email</li>
-				<li>Linkdin</li>
-				<li>Phone Number</li>
-				<li>Github</li>
-			</ul>
+		</div>
+	</div>
 	</body>
 
 	<script type="text/javascript" src="/javascripts/main.js"></script>
