--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -8,7 +8,36 @@ body {
 	font-size: 12px;
 	background:#bfbfbf;
 
-	
+}
+li {
+	margin-left: 20px;
+}
+
+h5{
+
+	font: 1.35em 'Droid Sans', sans-serif; /* 14px/10 */
+	line-height: 1.2em;
+	color: #0099e8;
+	font-weight: normal;
+}
+
+
+.clearfix:after {
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
+.section-title{
+	display: inline-block;
+	float: left;
+	text-align: right;
+	padding-right: 5px;
+	min-height: 50px;
+}
+.section-content{
+	display: inline-block;
+	float: left;
 }
 
 .language {
@@ -18,7 +47,9 @@ body {
 .inner-text {
 	
 }
-
+.skill-bar {
+	width: 500px;
+}
 
 
 
@@ -47,7 +78,7 @@ body {
 	z-index: 10;
 	position: relative;
 	margin: 0 auto;
-	padding: 0 0 20px 0;
+	padding: 5px 5px 20px 5px;
 	min-height: 500px;
 }
 
@@ -141,6 +172,7 @@ body {
 
 .s4 {
 	background: #5aa3c4;
+	color: #3d3d3d;
 }
 
 
