adds basic mobile page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html> 
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
@@ -20,12 +21,12 @@
 		<div class="subMenu" >
 		 	<div class="inner">
 		 		<a href="#sTop" class="subNavBtn">Home</a>
-		 		<a href="#s1" class="subNavBtn">Section 1</a> 
-				<a href="#s2" class="subNavBtn">Section 2</a>
-				<a href="#s3" class="subNavBtn">Section 3</a>
-				<a href="#s4" class="subNavBtn">Section 4</a>
-				<a href="#s5" class="subNavBtn">Section 5</a>
-				<a href="#" class="subNavBtn extLink end">External Link</a>
+		 		<a href="#s1" class="subNavBtn">Employment</a> 
+				<a href="#s2" class="subNavBtn">Education</a>
+				<a href="#s3" class="subNavBtn">Skills</a>
+				<a href="#s4" class="subNavBtn">Languages</a>
+				<a href="#s5" class="subNavBtn">Contact Me</a>
+				<!--<a href="#" class="subNavBtn extLink end">External Link</a>-->
 			</div>
 		</div>
 
