fills in mobile page

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -24,10 +24,10 @@ h5{
 
 .section-title{
 	/*display: inline-block;
-	float: left;*/
+	float: left;
 	text-align: right;
 	padding-right: 5px;
-	min-height: 50px;
+	min-height: 50px;*/
 }
 .section-content{
 	/*display: inline-block;
