adds links for github and linkedin

--- a/templates/mobile_index.html
+++ b/templates/mobile_index.html
@@ -195,8 +195,8 @@
 
 	<div data-role="content">	
 		<ul>
-			<li>Linkdin</li>
-			<li>Github</li>
+			<li><a href="https://www.linkedin.com/in/john-kulp-2b1b4889" rel="external">Linkdin</a></li>
+			<li><a href="https://github.com/SignificantOtter" rel="external">Github</a></li>
 		</ul>
 		<ul>
 			<li>
