--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,8 @@
 		</div>
 		<div class="section s5"><h2>Contact</h2>
 			<ul>
-				<li>Linkdin</li>
-				<li>Github</li>
+				<li><a href="https://www.linkedin.com/in/john-kulp-2b1b4889" rel="external">Linkdin</a></li>
+				<li><a href="https://github.com/SignificantOtter" rel="external">Github</a></li>
 			</ul>
 			<ul>
 				<li>
